--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,14 @@
 }
 
 
-.navbar-brand {
+/* .navbar-brand {
   font-family: "Ubuntu";
   font-size: 2.5rem;
   font-weight: bold;
   color: white;
-}
+} */
 .nav-link {
+  margin: 0 12px;
   font-size: 1.4rem;
   font-family: "Montserrat-Light";
   color: white;
